# DEFFS

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  DEFFS.geany  Makefile  README.md  build.sh  cmake_install.cmake  fusexmp_fh  mount.sh  pi@169.254.222.50  run_build.sh  shares.txt  xmp.c
CMake/: FindFUSE.cmake
builds/: DEFFS
include/: arguments.h  attr.h  crypto.h  deffs.h  perms.h  rw.h  shamir.h  utils.h
include/net/: client.h  net.h  server.h
lib/c-sss/: repo_link.txt  shamir.c
src/: arguments.c  attr.c  crypto.c  deffs.c  main.c  perms.c  rw.c  shamir.c  utils.c
src/net/: client.c  net.c  server.c
